...
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_text"
            style="@style/RATextView.MontserratLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/pricing_details"
            android:text="@string/pricing_details"
            android:textSize="18dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/selected_category_text"
            android:layout_marginTop="10dp"
            style="@style/RATextView.MontserratLight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="PREMIUM"
            android:text="PREMIUM"
...
                android:layout_height="@dimen/rate_driver_divider_height"
                android:background="@android:color/darker_gray"
                android:layout_below="@id/eta_value"
                android:id="@+id/horizontal_line_1" />

            <TextView
                android:id="@+id/base_fare_value"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="$ 1.50"
                android:layout_below="@id/horizontal_line_1"
                android:textAppearance="@style/RATextView.MontserratBold"
                android:textSize="12dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/per_mile_value"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/base_fare_value"
                android:text="$ 0.99"
                android:textAppearance="@style/RATextView.MontserratBold"
                android:textSize="12dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/per_min_value"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/per_mile_value"
                android:text="$ 0.25"
                android:textAppearance="@style/RATextView.MontserratBold"
                android:textSize="12dp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/min_value"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/per_min_value"
                android:text="$ 4.00"
                android:textAppearance="@style/RATextView.MontserratBold"
...
                android:layout_height="@dimen/rate_driver_divider_height"
                android:background="@android:color/darker_gray"
                android:layout_below="@id/min_value"
                android:id="@+id/horizontal_line_2" />

            <TextView
                android:id="@+id/booking_fee_value"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/horizontal_line_2"
                android:text="$ 2.00"
                android:textAppearance="@style/RATextView.MontserratBold"
                android:textSize="12dp"
                android:textColor="@color/black"/>


            <TextView
                android:id="@+id/tnc_fee_value"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/booking_fee_value"
                android:text="1%"
                android:textAppearance="@style/RATextView.MontserratBold"
...
