...
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
            >

...
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="95dp"
                    android:background="@color/white">

                    <ImageView
                        android:id="@+id/mark_image"
                        android:layout_width="15dp"
                        android:layout_height="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/icn_down_arrow"/>

                    <RelativeLayout
                        android:id="@+id/car_types_label_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>

                    <com.etiennelawlor.discreteslider.library.ui.DiscreteSlider
                        android:id="@+id/car_types_slider"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginBottom="8dp"
                        android:layout_gravity="bottom"
                        app:backdropFillColor="@color/white"
                        app:backdropStrokeColor="#C4C6CA"
...
